Update all devDependencies to latest versions

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,10 @@
   "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "prettier"
   ],
   "env": {
-    "node": true,
-    "commonjs": true
+    "node": true
   }
 }
