Load channel IDs from env file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DISCORD_BOT_TOKEN=foo
+
+# These are not required, you can set them to override the default channels IDs on dev
+#MOD_LOG_CHANNEL_ID=123456789012345678
+#RULES_CHANNEL_ID=123456789012345678
