--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "prettier": "^2.4.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
+  },
+  "engines": {
+    "node": ">=16.6"
   }
 }
